--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
     </audio>
 
     <div class="container">
-        <h1 class="main-title">Servidor De Junior</h1> <!-- Este es el titulo -->
-        
+        <h1 class="main-title">Servidor De Junior</h1> <!-- Título con efecto glitch -->
+
         <div class="profile-container">
             <img src="perfil.jpg" alt="Imagen de perfil" class="profile-img">
         </div>
 
-        <div class="buttons-container"> <!-- aqui van los links muchacho -->
+        <div class="buttons-container"> <!-- aquí van los links -->
             <a href="https://discord.gg/NzkFRMDBDG" class="button" target="_blank">Discord</a>
             <a href="https://roblox.ls/dashboard/?code=NDgzMzI5NzEyNDEzMDAwMzUwOQ==" class="button" target="_blank">Generador Roblox.ls</a>
             <a href="https://is.gd/lMO9Hc" class="button" target="_blank">Generator Roblox.com.py</a>
